--- a/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.html
+++ b/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.html
@@ -1,21 +1,13 @@
-<div class="main-container">
-  <div class="banner">
-    <img
-      src="../../../../../assets/image/events/asimov-cup/asimov-cup-banner.png"
-      class="max-width"
-      alt="Asimov Cup - Competencia de Robótica"
-    />
-  </div>
+<div class="main-container event">
+  <app-event-banner 
+    url="../../../../../assets/image/events/asimov-cup/asimov-cup-banner.png"
+    alt="Asimov Cup - Competencia de Robótica"
+  >
+  </app-event-banner>
 
-  <div class="topbottomLine" id="home">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm">
-          <h1 id="logotext" class="course-title">{{ 'ASIMOVCUP.TITLE' | translate }}</h1>
-        </div>
-      </div>
-    </div>
-  </div>
+  <app-event-title [asimov]="true">
+    {{ 'ASIMOVCUP.TITLE' | translate }}
+  </app-event-title>
 
   <div *ngIf="enrollAvailable()">
     <div class="d-flex justify-content-center">
@@ -28,53 +20,47 @@
   </div>
 
     <!-- DESCRIPTION section -->
-    <div class="section">
-      <h2 class="section-title">{{ "ASIMOVCUP.DESC.TITLE" | translate }}</h2>
-      <div class="text-section">
-        <p>{{ "ASIMOVCUP.DESC.SECTION.1.TEXT" | translate }}</p>
-        <p>{{ "ASIMOVCUP.DESC.SECTION.2.TEXT" | translate }}</p>
-        <ul class="category-cards-container">
-          <li class="category-grid-item" *ngFor="let category of categories">
-            <mat-card [class.mat-elevation-z8]="true" class="category-card">
-              <mat-card-header class="category-header">
-                <img class="category-card-icon" src="{{category.imgLink}}" alt="{{category.altTextCode | translate}}"/>
-                <div class="category-card-title"><b>{{category.textCode | translate}}</b></div>
-              </mat-card-header>
-              <mat-card-content class="expanded-content">
-                <p class="category-card-description">
-                  {{ category.descriptionTextCode | translate }}
-                </p>
-              </mat-card-content>
-              <mat-card-actions>
-                <button class="download-button">
-                  <a href="{{category.rulesLink}}" class="download-content-container text-decoration-none">
-                    <img class="download-icon" src="../../../../../assets/image/logos/download.svg" alt="Download icon">
-                    <span class="download-text">
-                      {{ "ASIMOVCUP.DOWNLOAD_RULEBOOK" | translate }}
-                    </span>
-                </a>
-              </button>
+  <app-event-section [asimov]="true" title="{{ 'ASIMOVCUP.DESC.TITLE' | translate }}">
+    <div>
+      <p>{{ "ASIMOVCUP.DESC.SECTION.1.TEXT" | translate }}</p>
+      <p>{{ "ASIMOVCUP.DESC.SECTION.2.TEXT" | translate }}</p>
+      <ul class="category-cards-container">
+        <li class="category-grid-item" *ngFor="let category of categories">
+          <app-event-content-card 
+            title="{{category.textCode | translate}}"
+            imageUrl="{{category.imgLink}}"
+          >
+            <p content class="category-card-description">
+              {{ category.descriptionTextCode | translate }}
+            </p>
+            <mat-card-actions actions>
+              <app-button
+                  [asimov]="true"
+                  [href]="category.rulesLink"
+                  imageUrl="../../../../../assets/image/logos/download.svg"
+                  imageAlt="Download icon"
+                  icon="download"
+                >
+                {{ "ASIMOVCUP.DOWNLOAD_RULEBOOK" | translate }}
+              </app-button>
             </mat-card-actions>
-          </mat-card>
+          </app-event-content-card>
         </li>
       </ul>
-      <p>{{ "ASIMOVCUP.DESC.SECTION.3.TEXT" | translate }}</p>
-      <div *ngIf="spectatorEnrollAvailable()">
-        <a href="{{spectatorEnrollLink}}" class="button-text">
-          <button class="enroll-button spectator-button">
-            {{ "ASIMOVCUP.DESC.SECTION.3.SPECTATEENROLL" | translate }}
-          </button>
-        </a>
-      </div>
+    <p>{{ "ASIMOVCUP.DESC.SECTION.3.TEXT" | translate }}</p>
+    <div *ngIf="spectatorEnrollAvailable()">
+      <a href="{{spectatorEnrollLink}}" class="button-text">
+        <button class="enroll-button spectator-button">
+          {{ "ASIMOVCUP.DESC.SECTION.3.SPECTATEENROLL" | translate }}
+        </button>
+      </a>
     </div>
   </div>
+  </app-event-section>
 
   <!-- DATE AND LOCATION section -->
 
-  <div class="section">
-    <h2 class="section-title">
-      {{ "ASIMOVCUP.D_AND_L_TITLE" | translate }}
-    </h2>
+  <app-event-section [asimov]="true" title="{{ 'ASIMOVCUP.D_AND_L_TITLE' | translate }}">
     <div class="centered-section">
       <div class="columned-section">
         <div class="aboutus-container">
@@ -99,7 +85,7 @@
         </div>
       </div>
     </div>
-    <!--
+     <!--
     <div class="text-section">
       <p>
         {{ "ASIMOVCUP.D_AND_L.TEXT_1" | translate }}
@@ -116,7 +102,7 @@
       />
     </div>
     -->
-  </div>
+  </app-event-section>
   <!--
     SCHEDULE section
     <div>
@@ -132,24 +118,11 @@
     -->
 
   <!-- FAQ section -->
-  <div class="faq-section">
-    <h2 class="section-title">{{ "ASIMOVCUP.FAQ.TITLE" | translate }}</h2>
-    <mat-accordion class="faq-accordion">
-      <mat-expansion-panel class="mat-elevation-z0" *ngFor="let qa of faq">
-        <mat-expansion-panel-header
-          [collapsedHeight]="'max-content'"
-          [expandedHeight]="'max-content'"
-        >
-          <mat-panel-title class="faq-question mt-1 mb-1">
-            {{ qa.q | translate }}
-          </mat-panel-title>
-        </mat-expansion-panel-header>
-
-        <p class="faq-answer">{{ qa.a | translate }}</p>
-      </mat-expansion-panel>
-    </mat-accordion>
-  </div>
-
+  <app-event-section [asimov]="true" title="{{ 'ASIMOVCUP.FAQ.TITLE' | translate }}">
+    <app-event-faq-accordion [asimov]="true" [faq]="faq">
+    </app-event-faq-accordion>
+  </app-event-section>
+  
   <div *ngIf="sponsors.length > 0" class="sponsor-section" id="sponsorship">
     <h2 class="section-title">{{ "ASIMOVCUP.SPONSORS" | translate }}</h2>
     <br>
