--- a/src/app/modules/iot/pages/iot/iot.component.html
+++ b/src/app/modules/iot/pages/iot/iot.component.html
@@ -1,16 +1,12 @@
-<div class="main-container">
-  <div class="banner">
-    <img src="../../../../../assets/image/events/iot/iot-banner.jpeg" class="max-width" alt="Banner IOT" />
-  </div>
-  <div class="top_bottom_line" id="home" style="margin-bottom: 1rem">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm">
-          <h1 id="logotext" class="course-title">{{ 'IOT.TITLE' | translate }}</h1>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="main-container event">
+  <app-event-banner
+    url="events/iot/iot-banner.jpeg"
+    alt="Banner IOT"
+  >
+  </app-event-banner>
+  <app-event-title>
+    {{ 'IOT.TITLE' | translate }}
+  </app-event-title>
 
   <div *ngIf="isEnrollingAvailable()">
     <div class="d-flex flex-row-reverse">
@@ -24,40 +20,20 @@
   </div>
 
   <!-- Introductory text -->
-  <div class="section">
-    <h2 class="course-subtitle">{{ 'IOT.DESC.TITLE' | translate }}</h2>
+  <app-event-section title="{{ 'IOT.DESC.TITLE' | translate }}">
     <p>{{ 'IOT.DESC.TEXT.1' | translate }}</p>
     <p>{{ 'IOT.DESC.TEXT.2' | translate }}</p>
     <p>{{ 'IOT.DESC.TEXT.3' | translate }}</p>
     <p>{{ 'IOT.DESC.TEXT.4' | translate }}</p>
-  </div>
+  </app-event-section>
 
-  <div class="section">
-    <h2 class="course-subtitle">{{ 'IOT.GALLERY_TITLE' | translate }}</h2>
-    <swiper [config]="swiperConfig" class="carousel-wrapper" *ngIf="swiperOn">
-      <ng-template swiperSlide class="carrousel-card" *ngFor="let image of imageLinks">
-        <img data-src="{{image}}"
-             data-background="../../../../../assets/image/events/python-introductory/cursopython.jpg" class="news-card-img"
-             alt="IoT image" loading="lazy" />
-      </ng-template>
-    </swiper>
-  </div>
+  <app-event-section title="{{ 'IOT.GALLERY_TITLE' | translate }}">
+    <app-image-carousel [imageLinks]="imageLinks"></app-image-carousel>
+  </app-event-section>
 
-  <div class="faq-section">
-    <h2 class="course-subtitle">{{ 'IOT.FAQ.TITLE' | translate }}</h2>
-    <mat-accordion class="faq-accordion">
-
-      <mat-expansion-panel class="mat-elevation-z0" *ngFor="let question of ('IOT.FAQ.QUESTIONS' | translate)">
-        <mat-expansion-panel-header [collapsedHeight]="'max-content'" [expandedHeight]="'max-content'">
-          <mat-panel-title class="faq-question mt-1 mb-1">
-            {{ question.QUESTION }}
-          </mat-panel-title>
-        </mat-expansion-panel-header>
-
-        <p class="faq-answer">{{ question.ANSWER }}</p>
-      </mat-expansion-panel>
-
-    </mat-accordion>
-  </div>
+  <app-event-section title="{{ 'IOT.FAQ.TITLE' | translate }}">
+    <app-event-faq-accordion [faq]="faq">
+    </app-event-faq-accordion>
+  </app-event-section>
 
 </div>
