fix(401&editar-anuncio): templates paddings

--- a/src/app/shared/components/error401/error401.component.html
+++ b/src/app/shared/components/error401/error401.component.html
@@ -1,4 +1,4 @@
-<body>
+<div class="main-container">
     <p class="statusCode">401</p>
     <div class="texto">
         <span class="message">{{ 'ERROR.ROLE' | translate }}</span>
@@ -6,5 +6,4 @@
     <div class="goback">
         <button class="goback-button" onclick="window.location.href = '/'">{{ 'ERROR.GOBACK' | translate }}</button>
     </div>
-</body>
-
+</div>
