--- a/src/app/modules/write-news/pages/editar-anuncio/editar-anuncio.component.html
+++ b/src/app/modules/write-news/pages/editar-anuncio/editar-anuncio.component.html
@@ -1,25 +1,27 @@
-<div fxLayoutAlign="center center" fxLayout="column">
-    <label for="fname">Titulo</label>
-    <input class="long-input" type="text" id="titulo" name="titulo"><br><br>
+<div class="main-container">
+    <div fxLayoutAlign="center center" fxLayout="column">
+        <label for="fname">Titulo</label>
+        <input class="long-input" type="text" id="titulo" name="titulo"><br><br>
+        
+        <label for="lname">NombreUrl (sin espacios)</label>
+        <input class="long-input" type="text" id="nombreUrl" name="nombreUrl"><br><br>
+        <label for="lname">Autor</label>
+        <input class="long-input" type="text" id="autor" name="autor"><br><br>
+        <label for="lname">imagen url</label>
+        <input class="long-input" type="text" id="imageUrl" name="imageUrl"><br><br>
+        <label for="lname">imagen text</label>
+        <input class="long-input" type="text" id="imageText" name="imageText"><br><br>
+        <label for="lname">Breve introducción</label>
+        <input class="long-input" type="text" id="shortIntro" name="imageText"><br><br>
     
-    <label for="lname">NombreUrl (sin espacios)</label>
-    <input class="long-input" type="text" id="nombreUrl" name="nombreUrl"><br><br>
-    <label for="lname">Autor</label>
-    <input class="long-input" type="text" id="autor" name="autor"><br><br>
-    <label for="lname">imagen url</label>
-    <input class="long-input" type="text" id="imageUrl" name="imageUrl"><br><br>
-    <label for="lname">imagen text</label>
-    <input class="long-input" type="text" id="imageText" name="imageText"><br><br>
-    <label for="lname">Breve introducción</label>
-    <input class="long-input" type="text" id="shortIntro" name="imageText"><br><br>
-
-    <div class="custom-control custom-checkbox">
-        <input type="checkbox" class="custom-control-input" id="listed">
-        <label class="custom-control-label" for="listed">Listed</label>
-    </div><br><br>
-
-    <label for="lname">Contenido</label>
-    <textarea class="long-input" id="content" name="content" cols="50" rows="10"></textarea>
+        <div class="custom-control custom-checkbox">
+            <input type="checkbox" class="custom-control-input" id="listed">
+            <label class="custom-control-label" for="listed">Listed</label>
+        </div><br><br>
     
-    <input type="submit" value="Submit" (click)="sendAnuncio()">
+        <label for="lname">Contenido</label>
+        <textarea class="long-input" id="content" name="content" cols="50" rows="10"></textarea>
+        
+        <input type="submit" value="Submit" (click)="sendAnuncio()">
+    </div>
 </div>
