style: change loading-spinner color if it's used in ras page

--- a/src/app/shared/components/loading-spinner/loading-spinner.component.css
+++ b/src/app/shared/components/loading-spinner/loading-spinner.component.css
@@ -10,6 +10,11 @@
     position: relative;
     width: 80px;
     height: 80px;
+    --background-color: var(--bs-ieee-bright-blue);
+}
+
+.lds-roller.ras {
+    --background-color: var(--bs-ieee-bright-red);
 }
 
 .lds-roller div {
@@ -24,7 +29,7 @@
     width: 7px;
     height: 7px;
     border-radius: 50%;
-    background: var(--bs-ieee-bright-blue);
+    background: var(--background-color);
     margin: -4px 0 0 -4px;
 }
 
