feat: add event editor to data-analysis event

--- a/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
+++ b/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
@@ -78,4 +78,6 @@
     <app-sponsor-component content [currentsponsor]="sponsorsServiceVar.getCurrentSponsors()"></app-sponsor-component>
   </app-event-section>
 
+    <!-- Editor de evento -->
+    <app-event-editor-button *ngIf="!!event" [event]="event"></app-event-editor-button>
 </div>
