--- a/src/app/shared/components/event-editor-button/event-editor-button.component.html
+++ b/src/app/shared/components/event-editor-button/event-editor-button.component.html
@@ -1,20 +1,11 @@
-<div class="outside-div">
-    <div class="inside-div">
-        <span class="button-tooltip" [class.hidden]="!showTooltip">
-            {{ 'HOME.EVENTS.EDIT.TITLE' | translate }}
-        </span>
-        <button
-            class="edit-button"
-            (click)="openModal()"
-            (mouseover)="toggleTooltip()"
-            (mouseout)="toggleTooltip()"
-            *ngIf="!!event"
-        >
-            <mdb-icon
-                fas
-                size="2x"
-                icon="edit"
-            ></mdb-icon>
-        </button>
-    </div>
-</div>
+<app-floating-button
+    [tooltipI18n]="'HOME.EVENTS.EDIT.TITLE'"
+    (clickEvent)="openModal()"
+    *ngIf="!!event"
+>
+    <mdb-icon
+        fas
+        size="2x"
+        icon="edit"
+    ></mdb-icon>
+</app-floating-button>
