--- a/src/app/shared/components/event-editor-modal/event-editor-modal.component.html
+++ b/src/app/shared/components/event-editor-modal/event-editor-modal.component.html
@@ -8,23 +8,35 @@
         ></mdb-icon>
     </button>
 </div>
-<div class="modal-body">
-    <label for="date">{{ "HOME.EVENTS.INITIAL_DATE" | translate }}</label>
-    <input
-        type="date"
-        id="date"
-        [ngModel]="event.dates[0].date | date:'yyyy-MM-dd' : 'UTC'"
-        (ngModelChange)="dateChanged($event)"
-        class="form-control"
-        required
-    >
-    <p *ngIf="!!errorI18n" class="error">
-        {{ errorI18n | translate }}
-    </p>
-</div>
-<div class="modal-footer">
-    <button type="button" class="close-btn" (click)="modalRef.hide()">{{ "HOME.EVENTS.EDIT.CANCEL" | translate }}</button>
-    <button type="button" class="save-btn" (click)="updateEvent()">
-        {{ "HOME.EVENTS.EDIT.SAVE" | translate }}
-    </button>
-</div>
+<form [formGroup]="eventForm" (ngSubmit)="updateEvent()">
+    <div class="modal-body">
+        <label for="date">{{ "HOME.EVENTS.INITIAL_DATE" | translate }}</label>
+        <input
+            type="date"
+            id="date"
+            class="form-control"
+            formControlName="date"
+            required
+        >
+        <div *ngIf="(date.invalid && (date.dirty || date.touched)) || !!errorI18n" class="error-container">
+            <p *ngIf="date.errors?.['required']" class="error">
+                {{ "HOME.EVENTS.EDIT.ERROR.DATE_REQUIRED" | translate }}
+            </p>
+            <p *ngIf="date.errors?.['pattern']" class="error">
+                {{ "HOME.EVENTS.EDIT.ERROR.DATE_INVALID" | translate }}
+            </p>
+            <p *ngIf="date.errors?.['pastDate']" class="error">
+                {{ "HOME.EVENTS.EDIT.ERROR.DATE_PAST" | translate }}
+            </p>
+            <p *ngIf="!!errorI18n" class="error">
+                {{ errorI18n | translate }}
+            </p>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn close-btn" (click)="modalRef.hide()">{{ "HOME.EVENTS.EDIT.CANCEL" | translate }}</button>
+        <button type="submit" class="btn save-btn" [disabled]="eventForm.invalid">
+            {{ "HOME.EVENTS.EDIT.SAVE" | translate }}
+        </button>
+    </div>
+</form>
