feat: add event editor button to the rest of the events' pages

--- a/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.html
+++ b/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.html
@@ -129,4 +129,6 @@
     <app-sponsor-component [currentsponsor]="sponsors"></app-sponsor-component>
   </div>
 
+    <!-- Editor de evento -->
+    <app-event-editor-button *ngIf="!!eventData" [event]="eventData"></app-event-editor-button>
 </div>
