chore: only allow admin users to edit events

--- a/src/app/shared/components/event-editor-button/event-editor-button.component.html
+++ b/src/app/shared/components/event-editor-button/event-editor-button.component.html
@@ -1,7 +1,7 @@
 <app-floating-button
     [tooltipI18n]="'HOME.EVENTS.EDIT.TITLE'"
     (clickEvent)="openModal()"
-    *ngIf="!!event"
+    *ngIf="!!event && isAdmin$ | async"
 >
     <mdb-icon
         fas
