fix: use the current palette color in components
LoadingSpinnerComponent, FloatingButtonComponent and EventEditorModalComponent show the corresponding background color (the current paletteColors value in AppConfigService)

--- a/src/app/modules/ras/pages/ras/ras.component.html
+++ b/src/app/modules/ras/pages/ras/ras.component.html
@@ -22,7 +22,7 @@
       </ul>
     </div>
     <ng-template #loadingEventsBlock>
-      <app-loading-spinner [isRas]="true"></app-loading-spinner>
+      <app-loading-spinner></app-loading-spinner>
     </ng-template>
     <hr>
     <div class="text-container">
