--- a/src/app/shared/components/floating-button/floating-button.component.css
+++ b/src/app/shared/components/floating-button/floating-button.component.css
@@ -13,7 +13,7 @@
 
 .button-tooltip {
     text-wrap: nowrap;
-    background-color: var(--bs-ieee-bright-blue);
+    background-color: var(--color);
     color: var(--bs-light);
     padding: 0.5rem 1rem;
     border-radius: 12px;
@@ -21,7 +21,7 @@
     font-size: 1rem;
     opacity: 100%;
     transition: opacity 0.5s ease;
-    box-shadow: 0 0 4px var(--bs-ieee-bright-blue);
+    box-shadow: 0 0 4px var(--color);
 }
 
 .button-tooltip.hidden {
@@ -31,9 +31,9 @@
 .edit-button {
     font-weight: 600;
     padding: 1rem;
-    border: solid var(--bs-ieee-bright-blue);
+    border: solid var(--color);
     border-radius: 50%;
-    background-color: var(--bs-ieee-bright-blue);
+    background-color: var(--color);
     color: var(--bs-light);
-    box-shadow: 0 0 4px var(--bs-ieee-bright-blue);
+    box-shadow: 0 0 4px var(--color);
 }
