--- a/src/app/shared/components/event-card-short/event-card-short.component.html
+++ b/src/app/shared/components/event-card-short/event-card-short.component.html
@@ -9,10 +9,8 @@
         [ngClass]="{'primary-filter': hasPrimaryColorIndex, 'secondary-filter': !hasPrimaryColorIndex}"
       />
       <div class="text-position">
-        <div *ngIf="event.dates[0].date !== null" class="date-inner-container">
-          <span *ngIf="!event.dates[0].showMonth">{{ event.dates[0].date.getDate() }}</span>
-          {{ capitalizeFirstLetter(event.dates[0].date.toLocaleString(locale(), { month: 'long' })) }}
-          <span *ngIf="event.dates[0].showYear">{{ event.dates[0].date.getFullYear() }}</span>
+        <div class="date-inner-container">
+            <span>{{getEventDate()}}</span>
         </div>
         <p class="text-on-image">
           {{ event.titleCode | translate }}
