--- a/src/app/modules/noticias/pages/noticia/noticia.component.html
+++ b/src/app/modules/noticias/pages/noticia/noticia.component.html
@@ -1,6 +1,11 @@
 <div class="main-container">
     <div *ngIf="(newsData$ | async) as newsData; else newsSkeleton" fxLayout="column" fxLayoutAlign="start center">
         <div class="news-body" fxLayout="column" fxLayoutAlign="start center">
+            <!--
+            <button *ngIf="isUserAuthor" [routerLink]="['/write-news', newsData.reference]">
+                Editar noticia
+            </button>
+            -->
             <div class="news-header mx-0 px-0">
                 <div class="d-flex flex-row mx-0">
                     <div class="d-flex flex-grow-1 flex-column">
@@ -54,6 +59,21 @@
             </div>
             <button type="button" class="btn btn-primary rounded-1 btn-lg more-news-btn" [routerLink]="['/noticias/']">
                 {{"NEWS.MORENEWS" | translate}}
+            </button>
+        </div>
+    </div>
+    <div *ngIf="isUserAuthorOrAdmin" class="outside-div">
+        <div class="inside-div">
+            <span class="button-tooltip" [class.hidden]="!showTooltip">
+                {{ "NEWS.EDIT-NEW" | translate }}
+            </span>
+            <button
+                class="edit-button"
+                (click)="onClick()"
+                (mouseover)="toggleTooltip()"
+                (mouseout)="toggleTooltip()"
+            >
+                <i class="fa-solid fa-pen"></i>
             </button>
         </div>
     </div>
