--- a/src/app/modules/write-news/pages/write-news/write-news.component.html
+++ b/src/app/modules/write-news/pages/write-news/write-news.component.html
@@ -69,66 +69,37 @@
             </mat-list-item>
             <mat-list-item>
               <!-- Body -->
-              <form [formGroup]="editorForm">
+              <form>
                 <div class="form-group mt-3">
                   <h4><label for="text-editor">{{ 'WRITE-NEW.BODY' | translate }}</label></h4>
-                  <quill-editor id="text-editor" (onContentChanged)="updateNewsText($event)"></quill-editor>
+                  <quill-editor id="text-editor" (onContentChanged)="updateNewsText($event)" [(ngModel)]="textContent" [ngModelOptions]="{ standalone: true }">
+
+                  </quill-editor>
                 </div>
               </form>
             </mat-list-item>
-            <!--
-            <mat-list-item>
-              <mat-radio-group aria-label="Select an option" [(ngModel)]="publishNow" (change)="changePublishDate()">
-                <mat-radio-button [value]="true" class="me-2">
-                  {{ 'WRITE-NEW.PUBLISH_NOW' | translate }}
-                </mat-radio-button>
-                <mat-radio-button [value]="false" disabled>
-                  {{ 'WRITE-NEW.PROGRAM_DATE' | translate }}
-                </mat-radio-button>
-              </mat-radio-group>
-            </mat-list-item>
-            <mat-list-item>
-              <mat-form-field class="w-50">
-                <mat-label>MM/DD/YYYY</mat-label>
-                <input matInput [min]="minDate" [matDatepicker]="datePicker" [disabled]="publishNow" [(ngModel)]="publishDate" (dateChange)="changePublishDate()">
-                <mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
-                <mat-datepicker #datePicker></mat-datepicker>
-              </mat-form-field>
-            </mat-list-item>
-            -->
             <mat-list-item>
               <button mat-raised-button class="upload-button" id="submitNews" color="primary" (click)="submitNews()">
-                {{ 'WRITE-NEW.UPLOAD' | translate }}
+                  <span *ngIf="newsReference == undefined; else noReferenceBlock">
+                      {{ 'WRITE-NEW.UPLOAD' | translate }}
+                  </span>
+                  <ng-template #noReferenceBlock>
+                      {{ 'WRITE-NEW.UPDATE' | translate }}
+                  </ng-template>
               </button>
             </mat-list-item>
         </mat-card>
 
     <mat-card class="preview-card">
       <div class="preview-container">
-        <h2 class="word-break short-intro-text" style="margin-bottom: 1rem">{{ user.fname + ' ' + user.lname || "Author" }}</h2>
-        <!--
-        <mat-chip-list class="news-tags">
-          <div *ngFor="let tag of currentTags()">
-            <mat-chip class="news-tag" selected>{{ tag }}</mat-chip>
-          </div>
-        </mat-chip-list>
-        -->
+        <h2 class="word-break short-intro-text" style="margin-bottom: 1rem">{{ getAuthorName() || "Author" }}</h2>
         <h1 class="word-break preview-title">{{ newsContent.title || "Título" }}</h1>
-        <span class="word-break short-intro-text" [innerHTML]="newsContent.shortIntro"></span>
-        <img class="preview-image" src="{{ newsContent.imageUrl }}" alt="Imagen de portada" [width]="600">
+        <span class="word-break short-intro-text" [innerHTML]="newsContent.shortIntro || ''"></span>
+        <img class="preview-image" src="{{ newsContent.imageUrl || '' }}" alt="Imagen de portada" [width]="600">
         <span class="preview-epigraph">{{ newsContent.imageText || "Epígrafe" }}</span>
         <div class="content-text word-break">
-          <!--
-          <div class="preview-author-date-container">
-            By
-            <span class="word-break">{{ user.fname + ' ' + user.lname || "Author" }},</span>
-            <div class="preview-date-container">
-              <span class="word-break">{{ dateFormatted() }}</span>
-            </div>
-          </div>
-          -->
           <br>
-          <span [innerHTML]="newsContent.content"></span>
+          <span [innerHTML]="newsContent.content || ''"></span>
         </div>
       </div>
     </mat-card>
