--- a/src/app/modules/admin/pages/users/users.component.html
+++ b/src/app/modules/admin/pages/users/users.component.html
@@ -26,7 +26,7 @@
         <td>{{ user.fname }}</td>
         <td>{{ user.lname }}</td>
         <td>{{ user.email }}</td>
-        <td>
+        <td class="role-col">
             <mat-chip class="small-chip" *ngIf="roles[user.role]" [color]="roles[user.role].color" highlighted>{{ roles[user.role].code | translate }}</mat-chip>
         </td>
     </tr>
