--- a/src/app/shared/components/floating-button/floating-button.component.html
+++ b/src/app/shared/components/floating-button/floating-button.component.html
@@ -1,5 +1,5 @@
 <div class="outside-div">
-    <div class="inside-div">
+    <div class="inside-div" [style.--color]="(getAppColors() | async).background">
         <span class="button-tooltip" [class.hidden]="!showTooltip">
             {{ tooltipI18n | translate }}
         </span>
