fix: migrate some promises to observables, fix some window.replace (wtf), use from to observify? promises

--- a/src/app/shared/components/error401/error401.component.html
+++ b/src/app/shared/components/error401/error401.component.html
@@ -4,6 +4,6 @@
         <span class="message">{{ 'ERROR.ROLE' | translate }}</span>
     </div>
     <div class="goback">
-        <button class="goback-button" onclick="window.location.href = '/'">{{ 'ERROR.GOBACK' | translate }}</button>
+        <button routerLink="/" class="goback-button">{{ 'ERROR.GOBACK' | translate }}</button>
     </div>
 </div>
